# hog2

./: .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: CPP Emscripten.yml  CPP SFML.yml  CPP STUB.yml
abstraction/: GraphAbstraction.h
algorithms/: AStarEpsilon.h  BFS.h  DVCBS.h  DynamicPotentialSearch.h  FrontierBFS.h  GenericPatrolUnit.h  GenericSearchUnit.h  GreedyAnchorSearch.h  GreedyDMUnit.h  IncrementalBTS.h  IncrementalIDA.h  OptimisticSearch.h  VisualizableGenericSearchAlgorithm.h  fMM.h
apps/3dmaps/: Sample.cpp
apps/airplane/: Driver.cpp
apps/bidirectional/: Driver.cpp  GUICode.cpp
apps/canonicalGrids/: Sample.cpp
apps/delta/: Driver.cpp
apps/fling/: Driver.cpp
apps/localsensingsearch/: GridLSSLRTAStar.h  Sample.cpp
apps/mapUtils/: Sample.cpp
apps/pathsample/: Sample.cpp
apps/puzzlesample/: StephenPuzzle.cpp
apps/roads/: Sample.cpp
apps/rubik/: Driver.cpp
apps/stp/: Driver.cpp
apps/voxel/: Sample.cpp
build_old/SFML/: Makefile.com.inc
build_old/SFML/apps/mapUtils/: Makefile.prj.inc
build_old/SFML/gui/: Makefile.prj.inc
build_old/XCode/HOG2 ObjC/HOG2 ObjC.xcodeproj/xcshareddata/xcschemes/: Example.xcscheme
build_old/XCode/hog2 mac native demos/hog2 mac native demos.xcodeproj/project.xcworkspace/xcuserdata/nathanst.xcuserdatad/: UserInterfaceState.xcuserstate
build_old/web/gui/: Makefile.prj.inc
cmake/: hog2Config.cmake.in
constraints/: BoundingBox.cpp
demos/DFID/: Driver.cpp
demos/JPS/: Driver.cpp
demos/STP/: Driver.cpp
demos/astar/: Driver.cpp
demos/dh-place/: Driver.cpp
demos/dijkstra/: Driver.cpp
demos/pancake/: Driver.cpp
demos/racetrack/: Driver.cpp  Driver.h
environments/: Airplane.cpp  Airplane.h  BurnedPancakePuzzle.h  CanonicalGraphEnvironment.cpp  CanonicalGraphEnvironment.h  CanonicalGrid.cpp  CanonicalGrid.h  ConfigEnvironment.cpp  ConfigEnvironment.h  Directional2DEnvironment.cpp  Directional2DEnvironment.h  DynamicWeightedGrid.h  Fling.cpp  Fling.h  FlipSide.cpp  FlipSide.h  GraphEnvironment.cpp  GraphEnvironment.h  Hexagon.cpp  MNAgentPuzzle.cpp  MNAgentPuzzle.h  MNPuzzle.h  Map2DConstrainedEnvironment.cpp  Map2DConstrainedEnvironment.h  Map2DEnvironment.cpp  Map2DEnvironment.h  Map2DHeading.cpp  Map2DHeading.h  Map2DSectorAbstractionEnvironment.cpp  Map2DSectorAbstractionEnvironment.h  Map3DGrid.cpp  Map3DGrid.h  MinimalSectorAbstraction.cpp  MinimalSectorAbstraction.h  MountainCar.cpp  MountainCar.h  NQueens.cpp  NQueens.h  NaryTree.cpp  NaryTree.h  (+33 more)
generic/: BidirectionalDijkstra.h  DelayedHeuristicAStar.h  EPEAStar.h  Focal.h  FocalAdd.h  GenericSearchAlgorithm.h  IOS.h  IncrementalBFS.h  IncrementalBGS.h  IncrementalDFID.h  MM.h  NBS.h  OldTemplateAStar.h  PEAStar.h  RandomUnit.h  TemplateAStar.h
graphalgorithms/: AStarDelay.cpp  AStarDelay.h  GraphAlgorithm.h  MeroB.cpp  MeroB.h  Propagation.cpp  Propagation.h
grids/: BoundingBox.cpp  CanonicalDijkstra.cpp  CanonicalDijkstra.h  GridHeuristics.cpp  JPS.cpp  JPS.h
gui/: Common.cpp  Common.h
gui/SFML/: EmbeddedFont.h  GLUtil.cpp  GLUtil.h  SFML_HOG.cpp  SFML_HOG.h  TextBox.cpp  TextBox.h
gui/STUB/: STUB_HOG.cpp  STUB_HOG.h
gui/STUB/SFML/: Window.cpp  Window.hpp
gui/web/: html_hog.cpp
learning/: FLRTAStar.h  HLRTAStar.h  LSSLRTAStar.h  LearningUnit.h  gLSSLRTAStar.h
mapalgorithms/: MapUnit.cpp  MapUnit.h
papers/IBEX/: Driver.cpp
search/: PDBHeuristic.h  SearchEnvironment.h  TreePermutationPDB.h
simulation/: HeuristicLearningMeasure.h  Unit.h  UnitGroup.h  UnitSimulation.h  WeightedUnitGroup.h
simulation/algorithms/: LRTAStar.h  MPLRTAStar.h  daLRTAStar.h
tests/MNPuzzle/: Driver.cpp
utils/: Constants.h  FPUtil.h  Graphics.cpp  Graphics.h  Map.cpp  Map.h  MapOverlay.cpp  MapOverlay.h  MonoFont.h  Plot2D.cpp  Plot2D.h  SVGUtil.cpp  SVGUtil.h  TextOverlay.cpp  TextOverlay.h
